manifests/develop/gateway-api/Gateway-public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.dev.misumi-sumi.com'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: misumi-sumi-com-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.dev.misumi-sumi.com'
      name: http
      port: 80
      protocol: HTTP
